--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ body {
     height: 100vh;
     width: 100%;
     text-align: center;
+    background-color: cyan;
 }
-
 
 .card-container {
     display: grid;
@@ -26,7 +26,7 @@ body {
     height: 20.5vmin;
     width: 18.5vmin;
     position: relative;
-    border: 1px dashed black;
+    border: 2.8px solid black;
   }
 
 .back-card, .front-card {
@@ -35,3 +35,11 @@ body {
     width: 100%;
 }
 
+#timer {
+    padding: 5px;
+}
+
+button {
+    height: 5vmin;
+    width: 15vmin;
+}
