--- a/style.css
+++ b/style.css
@@ -9,7 +9,15 @@ body {
     height: 100vh;
     width: 100%;
     text-align: center;
-    background-color: cyan;
+    background-color: whitesmoke;
+}
+
+#objective {
+    margin: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    color: black;
+    word-spacing: 2.5px;
 }
 
 .card-container {
@@ -36,10 +44,12 @@ body {
 }
 
 #timer {
-    padding: 5px;
+    margin: 5px;
+    font-size: 22px;
 }
 
 button {
     height: 5vmin;
     width: 15vmin;
+    font-size: 2.3vmin;
 }
