--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
     width: 18.5vmin;
     position: relative;
     border: 2.8px solid black;
+    cursor: pointer;
   }
 
 .back-card, .front-card {
@@ -48,8 +49,16 @@ body {
     font-size: 22px;
 }
 
-button {
+#start-btn {
     height: 5vmin;
-    width: 15vmin;
+    width: 10vmin;
     font-size: 2.3vmin;
+    cursor: pointer;
+}
+
+#playagain-btn {
+    height: 4vmin;
+    width: 17vmin;
+    font-size: 2.3vmin;
+    cursor: pointer;
 }
