added img to back-card

--- a/style.css
+++ b/style.css
@@ -9,7 +9,14 @@ body {
     height: 100vh;
     width: 100%;
     text-align: center;
-    background-color: whitesmoke;
+    background-color: #D1E3F4;
+}
+
+h1 {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 10px;
+    padding: 5px;
+    font-size: 30px;
 }
 
 #objective {
@@ -44,21 +51,39 @@ body {
     width: 100%;
 }
 
+.back-card {
+    background-color: #F4E2D1;
+    background-image: url('images/back-card-logo.jpg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.back-card:hover {
+    background-color: #998D83;
+}
+
+/* Hide front of card (holding img element) */
+/* WORK TO DO - FIGURE OUT HOW TO SWITCH BETWEEN VISIBLE/HIDDEN WHEN SELECTING CARDS */
+.front-card {
+    visibility: hidden;
+}
+
 #timer {
     margin: 5px;
     font-size: 22px;
 }
 
 #start-btn {
-    height: 5vmin;
-    width: 10vmin;
-    font-size: 2.3vmin;
+    height: 4.5vmin;
+    width: 8vmin;
+    font-size: 2vmin;
     cursor: pointer;
 }
 
 #playagain-btn {
     height: 4vmin;
-    width: 17vmin;
-    font-size: 2.3vmin;
+    width: 15vmin;
+    font-size: 2vmin;
     cursor: pointer;
 }
