--- a/style.css
+++ b/style.css
@@ -5,24 +5,22 @@
 }
 
 body {
-    font-family: Helvetica;
+    font-family: 'Quicksand', sans-serif;
     height: 100vh;
-    width: 100%;
+    width: auto;
     text-align: center;
     background-color: #D1E3F4;
 }
 
 h1 {
-    font-family: Arial, Helvetica, sans-serif;
     margin: 10px;
     padding: 5px;
-    font-size: 30px;
+    font-size: 37px;
 }
 
 #objective {
     margin: 15px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
+    font-size: 17px;
     color: black;
     word-spacing: 2.5px;
 }
@@ -34,24 +32,21 @@ h1 {
     align-content: center;
     row-gap: 15px;
     column-gap: 15px;
-    margin: 20px;
+    margin: 19px;
 }
 
-.card {
+.card { 
     height: 20.5vmin;
     width: 18.5vmin;
     position: relative;
-    border: 2.8px solid black;
+    border: 3px solid black;
     cursor: pointer;
   }
 
-.back-card, .front-card {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-}
-
 .back-card {
+    position: absolute;
+    height: 19.88vmin;
+    width: 17.88vmin;
     background-color: #F4E2D1;
     background-image: url('images/back-card-logo.jpg');
     background-size: contain;
@@ -63,22 +58,18 @@ h1 {
     background-color: #998D83;
 }
 
-/* Hide front of card (holding img element) */
-/* WORK TO DO - FIGURE OUT HOW TO SWITCH BETWEEN VISIBLE/HIDDEN WHEN SELECTING CARDS */
-.front-card {
-    visibility: hidden;
-}
-
 #timer {
-    margin: 5px;
-    font-size: 22px;
+    margin: 12px;
+    font-size: 25px;
 }
 
 #start-btn {
     height: 4.5vmin;
     width: 8vmin;
     font-size: 2vmin;
+    margin: 5px;
     cursor: pointer;
+    font-family: 'Quicksand', sans-serif;
 }
 
 #playagain-btn {
@@ -86,4 +77,5 @@ h1 {
     width: 15vmin;
     font-size: 2vmin;
     cursor: pointer;
+    font-family: 'Quicksand', sans-serif;
 }
