clean up excess code space / disabled card clicking until start game button is selected

--- a/style.css
+++ b/style.css
@@ -63,19 +63,12 @@ h1 {
     font-size: 25px;
 }
 
-#start-btn {
+#start-btn, #playagain-btn {
     height: 4.5vmin;
-    width: 8vmin;
-    font-size: 2vmin;
-    margin: 5px;
-    cursor: pointer;
-    font-family: 'Quicksand', sans-serif;
-}
-
-#playagain-btn {
-    height: 4vmin;
     width: 15vmin;
     font-size: 2vmin;
+    margin: 5px;
+    padding: 5px;
     cursor: pointer;
     font-family: 'Quicksand', sans-serif;
 }
