--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ h1 {
     background-color: rgba(0, 0, 0, 0.5);
   }
   
-.lightbox-message {
+.lightbox-window {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -99,13 +99,13 @@ h1 {
     padding: 20px;
     width: 500px;
     text-align: center;
-    border-radius: 25px;
+    border-radius: 50px;
   }
 
 #close-btn {
     position: absolute;
-    top: 15px;
-    right: 15px;
+    top: 20px;
+    right: 25px;
     font-size: 20px;
     background: none;
     border: none;
